SAR Blai Sandbox/src/objects/Oportunidad_platform__c.object
<CustomObject>
    <fields>
        <fullName>Precio_Cuota_inicial__c</fullName>
        <formula>Tarifa__r.Precio_cuota_inicial__c</formula>
        <label>Precio Cuota inicial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_Diario__c</fullName>
        <formula>IF(  ISPICKVAL(Tarifa__r.Tipo_Tarifa__c, &quot;Diaria&quot;)  , TEXT( Precio_Total__c ),&apos;...........&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio Diario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Precio_Dispositivo__c</fullName>
        <formula>IF( Precio_Dispositivo_new__c == 0, Tarifa__r.Precio_dispositivo__c, Precio_Dispositivo_new__c )</formula>
        <label>Precio Dispositivo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_Dispositivo_new__c</fullName>
        <label>Precio Dispositivo new</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_Ofertado__c</fullName>
        <label>Precio Ofertado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_Plus__c</fullName>
        <label>Precio Plus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_Reserva__c</fullName>
        <label>Precio reserva</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_Servicio__c</fullName>
        <formula>if(ISNULL( Tarifa__c ),0, Tarifa__r.Precio_servicio__c)</formula>
        <label>Precio Servicio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_Total__c</fullName>
        <formula>if( ISBLANK( Precio_Plus__c ), 
IF( Precio_Ofertado__c &lt;&gt;0 , 
Precio_Ofertado__c, IF(Descuento_Ofertado__c&lt;&gt;0, Precio__c *(1- Descuento_Ofertado__c ),Precio__c *(1- Descuento__c )) 
), 

IF( Precio_Ofertado__c &lt;&gt;0 , 
Precio_Ofertado__c, IF(Descuento_Ofertado__c&lt;&gt;0, (Precio__c *(1- Descuento_Ofertado__c ))+Precio_Plus__c,((Precio__c+Precio_Plus__c) *(1- Descuento__c ))) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio__c</fullName>
        <label>Precio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_sin_colgante__c</fullName>
        <label>Precio sin colgante</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_total_ADOREA__c</fullName>
        <formula>Precio__c  -  Descuento_ofertado_adorea__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prioridad__c</fullName>
        <label>Prioridad</label>
        <picklist>
            <picklistValues>
                <fullName>Baja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Alta</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procedencia__c</fullName>
        <label>Procedencia</label>
        <picklist>
            <picklistValues>
                <fullName>Centro Sarquavitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colectivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institución</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornadas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medios de comunicación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Sarquavitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescriptor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vecindad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recomendador_informado__c</fullName>
        <formula>if( ISBLANK(Empresa_Recomendadora__c),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recomendador informado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regimen__c</fullName>
        <inlineHelpText>Campo obligatorio en Etapa= &apos;Ingreso&apos;</inlineHelpText>
        <label>Régimen</label>
        <picklist>
            <picklistValues>
                <fullName>Residencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fin de Semana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinuo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reingreso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reingreso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Representate_legagal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A través de su representante legal</inlineHelpText>
        <label>Representate legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residente_First_Name__c</fullName>
        <formula>Residente__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residente First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residente_Last_Name__c</fullName>
        <formula>Residente__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residente Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Campo obligatorio en etapa &apos;Visita Planificada&apos;</inlineHelpText>
        <label>Residente</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAe0AAG</value>
            </filterItems>
            <filterItems>
                <field>Account.Residente__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Exitus__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.Etapa__c</field>
                <operation>equals</operation>
                <value>No ingreso, Ingreso</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Residente)</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Campo obligatorio en Etapa= &apos;Presentado Plan Personal&apos; / &apos;Negociación&apos;</inlineHelpText>
        <label>Servicio</label>
        <referenceTo>Servicio__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Situacion_economica__c</fullName>
        <label>Situación económica</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sociedad_Centro__c</fullName>
        <formula>Centro2__r.Sociedad__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sociedad Centro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sociedad__c</fullName>
        <formula>Centro2__r.Sociedad__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sociedad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tarifa__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tarifa</label>
        <referenceTo>Tarifa__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Telefono_Contacto__c</fullName>
        <formula>Persona_de_Contacto__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telefono Contacto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_representante_legal_Cond__c</fullName>
        <formula>if( Representate_legagal__c=true,     Telefono_representante_legal__c , &quot;..............&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teléfono representante legal Cond</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_representante_legal__c</fullName>
        <label>Teléfono representante legal</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Testimonio_que_acredita_su_calidad__c</fullName>
        <label>Testimonio que acredita su calidad</label>
        <picklist>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sentencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libro de família</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Texto_Antencion_Sanitaria__c</fullName>
        <formula>IF( Atencion_sanitaria__c=true,
IF( Idioma__c=&apos;Castellano&apos;  , &apos;j) Atención sanitaria (control y vigilancia).&apos;, &apos;j) Atenció sanitària (control i vigilància).&apos;),
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Texto Antencion Sanitaria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Habitacion__c</fullName>
        <formula>TEXT(Servicio__r.Tipo_Ocupacion__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo Habitacion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Servicio__c</fullName>
        <formula>TEXT(Servicio__r.Tipo_Servicio__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo Servicio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Financiacion__c</fullName>
        <inlineHelpText>Campo obligatorio en Etapa= &apos;Preingreso&apos;</inlineHelpText>
        <label>Tipo de Financiación</label>
        <picklist>
            <picklistValues>
                <fullName>ARTECAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ayuntamiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ayuntamiento Privado Barcelona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonos Consellería</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caja Sol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catsalut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenio internacional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSS CA Madrid - Co Financiados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSS CA Madrid - Financiados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diputación de Málaga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diputación de Toledo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diputación de Valencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diputación Foral de Alaba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diputación Foral de Bizkaia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diputación Foral Guipúzcoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E.R.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entidades de seguros libres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FERTECAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundació Balear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundación Andaluza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generalitat de Valencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOBIERNO CANTABRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASS Gobierno de Aragón</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMSERSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junta de Castilla La Mancha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junta de Extremadura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutualidades públicas concertades</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Servicio_Antiguo__c</fullName>
        <label>Tipo de Servicio Antiguo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_cobro__c</fullName>
        <inlineHelpText>Campo obligatorio en Etapa= &apos;Ingreso&apos;</inlineHelpText>
        <label>Tipo de cobro</label>
        <picklist>
            <picklistValues>
                <fullName>Anticipado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vencido</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_estancia__c</fullName>
        <label>Tipo de estancia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pago__c</fullName>
        <inlineHelpText>Campo obligatorio en etapa=&apos;Preingreso&apos;</inlineHelpText>
        <label>Tipo de pago</label>
        <picklist>
            <picklistValues>
                <fullName>Cofinanciada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gratis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_tarifa__c</fullName>
        <inlineHelpText>Campo obligatorio en Etapa= &apos;Presentado Plan Personal&apos;</inlineHelpText>
        <label>Tipo de tarifa</label>
        <picklist>
            <picklistValues>
                <fullName>Diaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mensual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_estancia2__c</fullName>
        <formula>IF(ISPICKVAL(Servicio__r.Tipo_Estancia__c, &apos;Permanente&apos;) , &apos;Mensual&apos;, &apos;Diaria&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo estancia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_manutencion__c</fullName>
        <label>Tipo manutención</label>
        <picklist>
            <picklistValues>
                <fullName>desayuno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>comida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>merienda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>desayuno y comida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>comida y merienda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>desayuno, comida y merienda</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visita_realizada_en__c</fullName>
        <inlineHelpText>Campo obligatorio en Etapa= &apos;Visita Planificada&apos;</inlineHelpText>
        <label>Lugar de la visita</label>
        <picklist>
            <picklistValues>
                <fullName>Centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lugar de residencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centro Hospitalario</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zona_Territorial__c</fullName>
        <formula>text(Centro2__r.Zona_Territorial__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zona Territorial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ambito__c</fullName>
        <label>Ámbito</label>
        <picklist>
            <picklistValues>
                <fullName>Residencial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centro de Día</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adorea</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>idLinia__c</fullName>
        <label>idLinia</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>logo_ayuntamiento__c</fullName>
        <formula>IMAGE(&apos;/servlet/servlet.ImageServer?id=015b0000001RfsZ&amp;oid=00D1100000C0aak&amp;lastMod=1415632231000&apos;, &apos;No encontrado&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>logo ayuntamiento</label>
        <type>Text</type>
    </fields>
    <label>Oportunidad</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Etapa__c</columns>
        <columns>Residente__c</columns>
        <columns>Persona_de_Contacto__c</columns>
        <columns>Centro2__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contrato_Firmado__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Contratos_firmados_mes_actual</fullName>
        <columns>NAME</columns>
        <columns>Pagador__c</columns>
        <columns>Residente__c</columns>
        <columns>Centro2__c</columns>
        <columns>Servicio__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Fecha_cierre__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Oportunidad_platform__c.Oportunidad_publica,Oportunidad_platform__c.Oportunidad_privada,Oportunidad_platform__c.Oportunidad_Adorea</value>
        </filters>
        <filters>
            <field>Etapa__c</field>
            <operation>equals</operation>
            <value>Ingreso</value>
        </filters>
        <filters>
            <field>Fecha_cierre__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Contrato_Firmado__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Contratos firmados mes actual</label>
        <sharedTo>
            <role>Servicios_Centrales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contratos_firmados_meses_anteriores</fullName>
        <columns>NAME</columns>
        <columns>Pagador__c</columns>
        <columns>Residente__c</columns>
        <columns>Centro2__c</columns>
        <columns>Servicio__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Fecha_cierre__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Oportunidad_platform__c.Oportunidad_publica,Oportunidad_platform__c.Oportunidad_privada,Oportunidad_platform__c.Oportunidad_Adorea</value>
        </filters>
        <filters>
            <field>Etapa__c</field>
            <operation>equals</operation>
            <value>Ingreso</value>
        </filters>
        <filters>
            <field>Fecha_cierre__c</field>
            <operation>lessThan</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Contrato_Firmado__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Contratos firmados meses anteriores</label>
        <sharedTo>
            <role>Servicios_Centrales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contratos_no_firmados_mes_actual</fullName>
        <columns>NAME</columns>
        <columns>Pagador__c</columns>
        <columns>Residente__c</columns>
        <columns>Centro2__c</columns>
        <columns>Servicio__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Fecha_cierre__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Oportunidad_platform__c.Oportunidad_publica,Oportunidad_platform__c.Oportunidad_privada,Oportunidad_platform__c.Oportunidad_Adorea</value>
        </filters>
        <filters>
            <field>Etapa__c</field>
            <operation>equals</operation>
            <value>Ingreso</value>
        </filters>
        <filters>
            <field>Fecha_cierre__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Contrato_Firmado__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Contratos no firmados mes actual</label>
        <sharedTo>
            <role>Servicios_Centrales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contratos_no_firmados_meses_anteriores</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>Pagador__c</columns>
        <columns>Residente__c</columns>
        <columns>Centro2__c</columns>
        <columns>Servicio__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Fecha_cierre__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Oportunidad_platform__c.Oportunidad_publica,Oportunidad_platform__c.Oportunidad_privada,Oportunidad_platform__c.Oportunidad_Adorea</value>
        </filters>
        <filters>
            <field>Etapa__c</field>
            <operation>equals</operation>
            <value>Ingreso</value>
        </filters>
        <filters>
            <field>Fecha_cierre__c</field>
            <operation>lessThan</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Contrato_Firmado__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>Admin Konozca</value>
        </filters>
        <filters>
            <field>Fecha_cierre__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </filters>
        <filters>
            <field>Motivio_de_Alta_GCR__c</field>
            <operation>equals</operation>
        </filters>
        <label>Contratos no firmados meses anteriores</label>
        <sharedTo>
            <role>Servicios_Centrales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OPs_2014_colectivo</fullName>
        <columns>NAME</columns>
        <columns>Empresa_Recomendadora__c</columns>
        <columns>Centro2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fecha_cierre__c</field>
            <operation>equals</operation>
            <value>LAST_YEAR</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Oportunidad_platform__c.Oportunidad_privada</value>
        </filters>
        <filters>
            <field>Etapa__c</field>
            <operation>equals</operation>
            <value>Ingreso</value>
        </filters>
        <filters>
            <field>Procedencia__c</field>
            <operation>equals</operation>
            <value>Colectivo</value>
        </filters>
        <label>OPs 2014 colectivo</label>
    </listViews>
    <listViews>
        <fullName>OPs_abiertas_Todas</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Persona_de_Contacto__c</columns>
        <columns>Residente__c</columns>
        <columns>Etapa__c</columns>
        <columns>Centro2__c</columns>
        <columns>Procedencia__c</columns>
        <columns>Empresa_Recomendadora__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Etapa__c</field>
            <operation>notEqual</operation>
            <value>Ingreso,No ingreso,Cerrada por el sistema</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Oportunidad_platform__c.Oportunidad_privada</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>OPs abiertas en la Semana</label>
    </listViews>
    <listViews>
        <fullName>OPs_abiertas_Todas1</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Persona_de_Contacto__c</columns>
        <columns>Residente__c</columns>
        <columns>Etapa__c</columns>
        <columns>Centro2__c</columns>
        <columns>Procedencia__c</columns>
        <columns>Empresa_Recomendadora__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Fecha_cierre__c</columns>
        <columns>Contar_oportunidad__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Etapa__c</field>
            <operation>notEqual</operation>
            <value>Ingreso,No ingreso,Cerrada por el sistema</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Oportunidad_platform__c.Oportunidad_privada</value>
        </filters>
        <label>OPs abiertas Todas***</label>
    </listViews>
    <listViews>
        <fullName>OPs_abiertas_semana_actual</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Persona_de_Contacto__c</columns>
        <columns>Residente__c</columns>
        <columns>Etapa__c</columns>
        <columns>Centro2__c</columns>
        <columns>Procedencia__c</columns>
        <columns>Empresa_Recomendadora__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Etapa__c</field>
            <operation>notEqual</operation>
            <value>Ingreso,No ingreso,Cerrada por el sistema</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Oportunidad_platform__c.Oportunidad_privada</value>
        </filters>
        <filters>
            <field>Centro2__c</field>
            <operation>equals</operation>
            <value>ALBUFERA,LA SALUT</value>
        </filters>
        <label>Prueba Abierta Zona Territorial</label>
    </listViews>
    <listViews>
        <fullName>OPs_cerradas_No_ingreso1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Persona_de_Contacto__c</columns>
        <columns>Residente__c</columns>
        <columns>Etapa__c</columns>
        <columns>Motivo_no_Ingreso__c</columns>
        <columns>Centro2__c</columns>
        <columns>Procedencia__c</columns>
        <columns>Empresa_Recomendadora__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Servicio__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Oportunidad_platform__c.Oportunidad_privada</value>
        </filters>
        <filters>
            <field>Fecha_cierre__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Etapa__c</field>
            <operation>equals</operation>
            <value>No ingreso</value>
        </filters>
        <label>OPs cerradas Semana No ingreso</label>
    </listViews>
    <listViews>
        <fullName>OPs_cerradas_ingreso</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Persona_de_Contacto__c</columns>
        <columns>Residente__c</columns>
        <columns>Etapa__c</columns>
        <columns>Centro2__c</columns>
        <columns>Procedencia__c</columns>
        <columns>Empresa_Recomendadora__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Servicio__c</columns>
        <columns>NOC_11_Renegociado__c</columns>
        <columns>NOC_11_Centro__c</columns>
        <columns>NOC_11_Persona__c</columns>
        <columns>Fecha_cierre__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Oportunidad_platform__c.Oportunidad_privada</value>
        </filters>
        <filters>
            <field>Fecha_cierre__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Etapa__c</field>
            <operation>equals</operation>
            <value>Ingreso</value>
        </filters>
        <label>OPs cerradas semana ingreso</label>
    </listViews>
    <listViews>
        <fullName>OPs_cerradas_semana_actual_sistema</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Persona_de_Contacto__c</columns>
        <columns>Residente__c</columns>
        <columns>Etapa__c</columns>
        <columns>Centro2__c</columns>
        <columns>Procedencia__c</columns>
        <columns>Empresa_Recomendadora__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Oportunidad_platform__c.Oportunidad_privada</value>
        </filters>
        <filters>
            <field>Fecha_cierre__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Etapa__c</field>
            <operation>equals</operation>
            <value>Cerrada por el sistema</value>
        </filters>
        <label>OPs cerradas semana actual (sistema)</label>
    </listViews>
</CustomObject>